y.output
Terminals unused in grammar

   tINTERFACE
   tSELECT
   tDEFER
   tGO
   tMAP
   tCHAN
   tGOTO
   tCONST
   tFALLTHROUGH
   tRANGE
   tIMPORT
   tREAD
   tELLIPSIS
   tARROW


Grammar

    0 $accept: program $end

    1 program: packages tSEMICOLON initial_dcls

    2 packages: tPACKAGE tIDENTIFIER

    3 initial_dcls: initial_dcls initial_dcl
    4             | %empty

    5 initial_dcl: dcl
    6            | funcDcl

    7 dcl: varDcl
    8    | typeDcl

    9 varDcl: tVAR vars tSEMICOLON
   10       | tVAR tOPEN_PAREN varslist tCLOSE_PAREN tSEMICOLON

   11 varslist: varslist vars tSEMICOLON
   12         | %empty

   13 vars: idlist type tASSIGN exprlist
   14     | idlist tASSIGN exprlist
   15     | idlist type

   16 idlist: id
   17       | id tCOMMA idlist

   18 id: tIDENTIFIER
   19   | tINT
   20   | tFLOAT
   21   | tBOOLEAN
   22   | tSTRING
   23   | tRUNE

   24 type: tINT
   25     | tFLOAT
   26     | tSTRING
   27     | tBOOLEAN
   28     | tRUNE
   29     | tOPEN_SQ tCLOSE_SQ type
   30     | tOPEN_SQ tINTVAL tCLOSE_SQ type
   31     | tSTRUCT tOPEN_BRACE memberlist tCLOSE_BRACE
   32     | tIDENTIFIER

   33 memberlist: memberlist member
   34           | %empty

   35 member: idlist type

   36 typeDcl: tTYPE types tSEMICOLON
   37        | tTYPE tOPEN_PAREN typeslist tCLOSE_PAREN tSEMICOLON

   38 typeslist: typeslist types tSEMICOLON
   39          | %empty

   40 types: tIDENTIFIER type

   41 funcDcl: tFUNC tIDENTIFIER function

   42 function: signature body

   43 signature: parameters
   44          | parameters type

   45 parameters: tOPEN_PAREN parameter_list tCLOSE_PAREN
   46           | tOPEN_PAREN tCLOSE_PAREN

   47 parameter_list: parameter_list tCOMMA parameter
   48               | parameter

   49 parameter: idlist type

   50 body: block

   51 block: simple_block tSEMICOLON

   52 simple_block: tOPEN_BRACE statement_list tCLOSE_BRACE

   53 statement_list: statement_list statement
   54               | %empty

   55 statement: dcl
   56          | block
   57          | print_stmt
   58          | println_stmt
   59          | return_stmt
   60          | if_stmt
   61          | for_stmt
   62          | switch_stmt
   63          | break_stmt
   64          | continue_stmt
   65          | simple_stmt

   66 print_stmt: tPRINT tOPEN_PAREN exprlist tCLOSE_PAREN tSEMICOLON
   67           | tPRINT tOPEN_PAREN tCLOSE_PAREN tSEMICOLON

   68 println_stmt: tPRINTLN tOPEN_PAREN exprlist tCLOSE_PAREN tSEMICOLON
   69             | tPRINTLN tOPEN_PAREN tCLOSE_PAREN tSEMICOLON

   70 return_stmt: tRETURN expr tSEMICOLON
   71            | tRETURN tSEMICOLON

   72 if_stmt: tIF if_condition block
   73        | tIF if_condition simple_block tELSE else_block

   74 if_condition: simple_stmt expr
   75             | expr

   76 else_block: block
   77           | if_stmt

   78 for_stmt: tFOR for_condition block

   79 for_condition: condition
   80              | simple_stmt_no_semi tSEMICOLON condition tSEMICOLON simple_stmt_no_semi

   81 condition: expr
   82          | %empty

   83 switch_stmt: tSWITCH switch_condition tOPEN_BRACE caselist tCLOSE_BRACE

   84 switch_condition: simple_stmt
   85                 | simple_stmt expr
   86                 | expr
   87                 | %empty

   88 caselist: case tCOLON statement_list

   89 case: tCASE exprlist
   90     | tDEFAULT

   91 break_stmt: tBREAK tSEMICOLON

   92 continue_stmt: tCONTINUE tSEMICOLON

   93 simple_stmt: simple_stmt_no_semi tSEMICOLON

   94 simple_stmt_no_semi: expr
   95                    | expr tINC
   96                    | expr tDEC
   97                    | assignment_stmt
   98                    | shortDcl

   99 assignment_stmt: exprlist assign exprlist

  100 shortDcl: exprlist tDECL exprlist

  101 exprlist: expr
  102         | exprlist tCOMMA expr

  103 expr: expr tPLUS expr
  104     | expr tMINUS expr
  105     | expr tMULT expr
  106     | expr tDIV expr
  107     | expr tMOD expr
  108     | expr tLT expr
  109     | expr tLT_EQ expr
  110     | expr tGT expr
  111     | expr tGT_EQ expr
  112     | expr tEQ_EQ expr
  113     | expr tNOT_EQUALS expr
  114     | expr tSHIFT_RIGHT expr
  115     | expr tSHIFT_LEFT expr
  116     | expr tAND expr
  117     | expr tAMP_XOR expr
  118     | expr tOR expr
  119     | expr tXOR expr
  120     | expr tLOGICAL_AND expr
  121     | expr tLOGICAL_OR expr
  122     | unary_op expr
  123     | append_expr
  124     | other_expressions

  125 unary_op: tPLUS
  126         | tMINUS
  127         | tNOT
  128         | tXOR

  129 append_expr: tAPPEND tOPEN_PAREN tIDENTIFIER tCOMMA exprlist tCLOSE_PAREN

  130 other_expressions: operand
  131                  | function_call
  132                  | typecasting
  133                  | other_expressions array_index
  134                  | other_expressions slice_range
  135                  | struct_selector

  136 operand: tOPEN_PAREN expr tCLOSE_PAREN
  137        | tIDENTIFIER
  138        | tINTVAL
  139        | tFLOATVAL
  140        | tSTRINGVAL
  141        | tRUNEVAL
  142        | tRAWSTRVAL

  143 function_call: tIDENTIFIER tOPEN_PAREN exprlist tCLOSE_PAREN
  144              | tIDENTIFIER tOPEN_PAREN tCLOSE_PAREN

  145 typecasting: tINT tOPEN_PAREN expr tCLOSE_PAREN
  146            | tFLOAT tOPEN_PAREN expr tCLOSE_PAREN
  147            | tBOOLEAN tOPEN_PAREN expr tCLOSE_PAREN
  148            | tRUNE tOPEN_PAREN expr tCLOSE_PAREN

  149 array_index: tOPEN_SQ expr tCLOSE_SQ

  150 slice_range: tOPEN_SQ expr tCOLON expr tCLOSE_SQ
  151            | tOPEN_SQ tCOLON expr tCLOSE_SQ
  152            | tOPEN_SQ expr tCOLON tCLOSE_SQ
  153            | tOPEN_SQ tCOLON tCLOSE_SQ
  154            | tOPEN_SQ expr tCOLON expr tCOLON expr tCLOSE_SQ
  155            | tOPEN_SQ tCOLON expr tCOLON expr tCLOSE_SQ

  156 struct_selector: tIDENTIFIER tPERIOD tIDENTIFIER

  157 assign: tASSIGN
  158       | tPLUS_EQ
  159       | tMINUS_EQ
  160       | tMULT_EQ
  161       | tDIV_EQ
  162       | tMOD_EQ
  163       | tAMP_EQ
  164       | tOR_EQ
  165       | tXOR_EQ
  166       | tSHIFT_LEFT_EQ
  167       | tSHIFT_RIGHT_EQ
  168       | tAMP_XOR_EQ


Terminals, with rules where they appear

$end (0) 0
error (256)
tBREAK (258) 91
tDEFAULT (259) 90
tFUNC (260) 41
tINTERFACE (261)
tSELECT (262)
tCASE (263) 89
tDEFER (264)
tGO (265)
tMAP (266)
tSTRUCT (267) 31
tCHAN (268)
tELSE (269) 73
tGOTO (270)
tPACKAGE (271) 2
tSWITCH (272) 83
tCONST (273)
tFALLTHROUGH (274)
tIF (275) 72 73
tRANGE (276)
tTYPE (277) 36 37
tCONTINUE (278) 92
tFOR (279) 78
tIMPORT (280)
tRETURN (281) 70 71
tVAR (282) 9 10
tPRINT (283) 66 67
tPRINTLN (284) 68 69
tAPPEND (285) 129
tREAD (286)
tSEMICOLON (287) 1 9 10 11 36 37 38 51 66 67 68 69 70 71 80 91 92 93
tCOLON (288) 88 150 151 152 153 154 155
tCOMMA (289) 17 47 102 129
tPERIOD (290) 156
tELLIPSIS (291)
tASSIGN (292) 13 14 157
tMULT (293) 105
tDIV (294) 106
tPLUS (295) 103 125
tMINUS (296) 104 126
tAND (297) 116
tOR (298) 118
tMOD (299) 107
tXOR (300) 119 128
tNOT (301) 127
tOPEN_PAREN (302) 10 37 45 46 66 67 68 69 129 136 143 144 145 146 147
    148
tCLOSE_PAREN (303) 10 37 45 46 66 67 68 69 129 136 143 144 145 146
    147 148
tOPEN_BRACE (304) 31 52 83
tCLOSE_BRACE (305) 31 52 83
tOPEN_SQ (306) 29 30 149 150 151 152 153 154 155
tCLOSE_SQ (307) 29 30 149 150 151 152 153 154 155
tDECL (308) 100
tEQ_EQ (309) 112
tNOT_EQUALS (310) 113
tLOGICAL_AND (311) 120
tLOGICAL_OR (312) 121
tPLUS_EQ (313) 158
tAMP_EQ (314) 163
tMINUS_EQ (315) 159
tMOD_EQ (316) 162
tMULT_EQ (317) 160
tDIV_EQ (318) 161
tOR_EQ (319) 164
tLT (320) 108
tGT (321) 110
tLT_EQ (322) 109
tGT_EQ (323) 111
tXOR_EQ (324) 165
tARROW (325)
tSHIFT_LEFT (326) 115
tSHIFT_RIGHT (327) 114
tSHIFT_LEFT_EQ (328) 166
tSHIFT_RIGHT_EQ (329) 167
tINC (330) 95
tDEC (331) 96
tAMP_XOR (332) 117
tAMP_XOR_EQ (333) 168
tINT (334) 19 24 145
tFLOAT (335) 20 25 146
tSTRING (336) 22 26
tBOOLEAN (337) 21 27 147
tRUNE (338) 23 28 148
tUNARY (339)
tINTVAL (340) 30 138
tFLOATVAL (341) 139
tSTRINGVAL (342) 140
tRAWSTRVAL (343) 142
tIDENTIFIER (344) 2 18 32 40 41 129 137 143 144 156
tRUNEVAL (345) 141


Nonterminals, with rules where they appear

$accept (91)
    on left: 0
program (92)
    on left: 1, on right: 0
packages (93)
    on left: 2, on right: 1
initial_dcls (94)
    on left: 3 4, on right: 1 3
initial_dcl (95)
    on left: 5 6, on right: 3
dcl (96)
    on left: 7 8, on right: 5 55
varDcl (97)
    on left: 9 10, on right: 7
varslist (98)
    on left: 11 12, on right: 10 11
vars (99)
    on left: 13 14 15, on right: 9 11
idlist (100)
    on left: 16 17, on right: 13 14 15 17 35 49
id (101)
    on left: 18 19 20 21 22 23, on right: 16 17
type (102)
    on left: 24 25 26 27 28 29 30 31 32, on right: 13 15 29 30 35 40
    44 49
memberlist (103)
    on left: 33 34, on right: 31 33
member (104)
    on left: 35, on right: 33
typeDcl (105)
    on left: 36 37, on right: 8
typeslist (106)
    on left: 38 39, on right: 37 38
types (107)
    on left: 40, on right: 36 38
funcDcl (108)
    on left: 41, on right: 6
function (109)
    on left: 42, on right: 41
signature (110)
    on left: 43 44, on right: 42
parameters (111)
    on left: 45 46, on right: 43 44
parameter_list (112)
    on left: 47 48, on right: 45 47
parameter (113)
    on left: 49, on right: 47 48
body (114)
    on left: 50, on right: 42
block (115)
    on left: 51, on right: 50 56 72 76 78
simple_block (116)
    on left: 52, on right: 51 73
statement_list (117)
    on left: 53 54, on right: 52 53 88
statement (118)
    on left: 55 56 57 58 59 60 61 62 63 64 65, on right: 53
print_stmt (119)
    on left: 66 67, on right: 57
println_stmt (120)
    on left: 68 69, on right: 58
return_stmt (121)
    on left: 70 71, on right: 59
if_stmt (122)
    on left: 72 73, on right: 60 77
if_condition (123)
    on left: 74 75, on right: 72 73
else_block (124)
    on left: 76 77, on right: 73
for_stmt (125)
    on left: 78, on right: 61
for_condition (126)
    on left: 79 80, on right: 78
condition (127)
    on left: 81 82, on right: 79 80
switch_stmt (128)
    on left: 83, on right: 62
switch_condition (129)
    on left: 84 85 86 87, on right: 83
caselist (130)
    on left: 88, on right: 83
case (131)
    on left: 89 90, on right: 88
break_stmt (132)
    on left: 91, on right: 63
continue_stmt (133)
    on left: 92, on right: 64
simple_stmt (134)
    on left: 93, on right: 65 74 84 85
simple_stmt_no_semi (135)
    on left: 94 95 96 97 98, on right: 80 93
assignment_stmt (136)
    on left: 99, on right: 97
shortDcl (137)
    on left: 100, on right: 98
exprlist (138)
    on left: 101 102, on right: 13 14 66 68 89 99 100 102 129 143
expr (139)
    on left: 103 104 105 106 107 108 109 110 111 112 113 114 115 116
    117 118 119 120 121 122 123 124, on right: 70 74 75 81 85 86 94
    95 96 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115
    116 117 118 119 120 121 122 136 145 146 147 148 149 150 151 152
    154 155
unary_op (140)
    on left: 125 126 127 128, on right: 122
append_expr (141)
    on left: 129, on right: 123
other_expressions (142)
    on left: 130 131 132 133 134 135, on right: 124 133 134
operand (143)
    on left: 136 137 138 139 140 141 142, on right: 130
function_call (144)
    on left: 143 144, on right: 131
typecasting (145)
    on left: 145 146 147 148, on right: 132
array_index (146)
    on left: 149, on right: 133
slice_range (147)
    on left: 150 151 152 153 154 155, on right: 134
struct_selector (148)
    on left: 156, on right: 135
assign (149)
    on left: 157 158 159 160 161 162 163 164 165 166 167 168, on right:
    99


State 0

    0 $accept: . program $end

    tPACKAGE  shift, and go to state 1

    program   go to state 2
    packages  go to state 3


State 1

    2 packages: tPACKAGE . tIDENTIFIER

    tIDENTIFIER  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: packages . tSEMICOLON initial_dcls

    tSEMICOLON  shift, and go to state 6


State 4

    2 packages: tPACKAGE tIDENTIFIER .

    $default  reduce using rule 2 (packages)


State 5

    0 $accept: program $end .

    $default  accept


State 6

    1 program: packages tSEMICOLON . initial_dcls

    $default  reduce using rule 4 (initial_dcls)

    initial_dcls  go to state 7


State 7

    1 program: packages tSEMICOLON initial_dcls .
    3 initial_dcls: initial_dcls . initial_dcl

    tFUNC  shift, and go to state 8
    tTYPE  shift, and go to state 9
    tVAR   shift, and go to state 10

    $default  reduce using rule 1 (program)

    initial_dcl  go to state 11
    dcl          go to state 12
    varDcl       go to state 13
    typeDcl      go to state 14
    funcDcl      go to state 15


State 8

   41 funcDcl: tFUNC . tIDENTIFIER function

    tIDENTIFIER  shift, and go to state 16


State 9

   36 typeDcl: tTYPE . types tSEMICOLON
   37        | tTYPE . tOPEN_PAREN typeslist tCLOSE_PAREN tSEMICOLON

    tOPEN_PAREN  shift, and go to state 17
    tIDENTIFIER  shift, and go to state 18

    types  go to state 19


State 10

    9 varDcl: tVAR . vars tSEMICOLON
   10       | tVAR . tOPEN_PAREN varslist tCLOSE_PAREN tSEMICOLON

    tOPEN_PAREN  shift, and go to state 20
    tINT         shift, and go to state 21
    tFLOAT       shift, and go to state 22
    tSTRING      shift, and go to state 23
    tBOOLEAN     shift, and go to state 24
    tRUNE        shift, and go to state 25
    tIDENTIFIER  shift, and go to state 26

    vars    go to state 27
    idlist  go to state 28
    id      go to state 29


State 11

    3 initial_dcls: initial_dcls initial_dcl .

    $default  reduce using rule 3 (initial_dcls)


State 12

    5 initial_dcl: dcl .

    $default  reduce using rule 5 (initial_dcl)


State 13

    7 dcl: varDcl .

    $default  reduce using rule 7 (dcl)


State 14

    8 dcl: typeDcl .

    $default  reduce using rule 8 (dcl)


State 15

    6 initial_dcl: funcDcl .

    $default  reduce using rule 6 (initial_dcl)


State 16

   41 funcDcl: tFUNC tIDENTIFIER . function

    tOPEN_PAREN  shift, and go to state 30

    function    go to state 31
    signature   go to state 32
    parameters  go to state 33


State 17

   37 typeDcl: tTYPE tOPEN_PAREN . typeslist tCLOSE_PAREN tSEMICOLON

    $default  reduce using rule 39 (typeslist)

    typeslist  go to state 34


State 18

   40 types: tIDENTIFIER . type

    tSTRUCT      shift, and go to state 35
    tOPEN_SQ     shift, and go to state 36
    tINT         shift, and go to state 37
    tFLOAT       shift, and go to state 38
    tSTRING      shift, and go to state 39
    tBOOLEAN     shift, and go to state 40
    tRUNE        shift, and go to state 41
    tIDENTIFIER  shift, and go to state 42

    type  go to state 43


State 19

   36 typeDcl: tTYPE types . tSEMICOLON

    tSEMICOLON  shift, and go to state 44


State 20

   10 varDcl: tVAR tOPEN_PAREN . varslist tCLOSE_PAREN tSEMICOLON

    $default  reduce using rule 12 (varslist)

    varslist  go to state 45


State 21

   19 id: tINT .

    $default  reduce using rule 19 (id)


State 22

   20 id: tFLOAT .

    $default  reduce using rule 20 (id)


State 23

   22 id: tSTRING .

    $default  reduce using rule 22 (id)


State 24

   21 id: tBOOLEAN .

    $default  reduce using rule 21 (id)


State 25

   23 id: tRUNE .

    $default  reduce using rule 23 (id)


State 26

   18 id: tIDENTIFIER .

    $default  reduce using rule 18 (id)


State 27

    9 varDcl: tVAR vars . tSEMICOLON

    tSEMICOLON  shift, and go to state 46


State 28

   13 vars: idlist . type tASSIGN exprlist
   14     | idlist . tASSIGN exprlist
   15     | idlist . type

    tSTRUCT      shift, and go to state 35
    tASSIGN      shift, and go to state 47
    tOPEN_SQ     shift, and go to state 36
    tINT         shift, and go to state 37
    tFLOAT       shift, and go to state 38
    tSTRING      shift, and go to state 39
    tBOOLEAN     shift, and go to state 40
    tRUNE        shift, and go to state 41
    tIDENTIFIER  shift, and go to state 42

    type  go to state 48


State 29

   16 idlist: id .
   17       | id . tCOMMA idlist

    tCOMMA  shift, and go to state 49

    $default  reduce using rule 16 (idlist)


State 30

   45 parameters: tOPEN_PAREN . parameter_list tCLOSE_PAREN
   46           | tOPEN_PAREN . tCLOSE_PAREN

    tCLOSE_PAREN  shift, and go to state 50
    tINT          shift, and go to state 21
    tFLOAT        shift, and go to state 22
    tSTRING       shift, and go to state 23
    tBOOLEAN      shift, and go to state 24
    tRUNE         shift, and go to state 25
    tIDENTIFIER   shift, and go to state 26

    idlist          go to state 51
    id              go to state 29
    parameter_list  go to state 52
    parameter       go to state 53


State 31

   41 funcDcl: tFUNC tIDENTIFIER function .

    $default  reduce using rule 41 (funcDcl)


State 32

   42 function: signature . body

    tOPEN_BRACE  shift, and go to state 54

    body          go to state 55
    block         go to state 56
    simple_block  go to state 57


State 33

   43 signature: parameters .
   44          | parameters . type

    tSTRUCT      shift, and go to state 35
    tOPEN_SQ     shift, and go to state 36
    tINT         shift, and go to state 37
    tFLOAT       shift, and go to state 38
    tSTRING      shift, and go to state 39
    tBOOLEAN     shift, and go to state 40
    tRUNE        shift, and go to state 41
    tIDENTIFIER  shift, and go to state 42

    $default  reduce using rule 43 (signature)

    type  go to state 58


State 34

   37 typeDcl: tTYPE tOPEN_PAREN typeslist . tCLOSE_PAREN tSEMICOLON
   38 typeslist: typeslist . types tSEMICOLON

    tCLOSE_PAREN  shift, and go to state 59
    tIDENTIFIER   shift, and go to state 18

    types  go to state 60


State 35

   31 type: tSTRUCT . tOPEN_BRACE memberlist tCLOSE_BRACE

    tOPEN_BRACE  shift, and go to state 61


State 36

   29 type: tOPEN_SQ . tCLOSE_SQ type
   30     | tOPEN_SQ . tINTVAL tCLOSE_SQ type

    tCLOSE_SQ  shift, and go to state 62
    tINTVAL    shift, and go to state 63


State 37

   24 type: tINT .

    $default  reduce using rule 24 (type)


State 38

   25 type: tFLOAT .

    $default  reduce using rule 25 (type)


State 39

   26 type: tSTRING .

    $default  reduce using rule 26 (type)


State 40

   27 type: tBOOLEAN .

    $default  reduce using rule 27 (type)


State 41

   28 type: tRUNE .

    $default  reduce using rule 28 (type)


State 42

   32 type: tIDENTIFIER .

    $default  reduce using rule 32 (type)


State 43

   40 types: tIDENTIFIER type .

    $default  reduce using rule 40 (types)


State 44

   36 typeDcl: tTYPE types tSEMICOLON .

    $default  reduce using rule 36 (typeDcl)


State 45

   10 varDcl: tVAR tOPEN_PAREN varslist . tCLOSE_PAREN tSEMICOLON
   11 varslist: varslist . vars tSEMICOLON

    tCLOSE_PAREN  shift, and go to state 64
    tINT          shift, and go to state 21
    tFLOAT        shift, and go to state 22
    tSTRING       shift, and go to state 23
    tBOOLEAN      shift, and go to state 24
    tRUNE         shift, and go to state 25
    tIDENTIFIER   shift, and go to state 26

    vars    go to state 65
    idlist  go to state 28
    id      go to state 29


State 46

    9 varDcl: tVAR vars tSEMICOLON .

    $default  reduce using rule 9 (varDcl)


State 47

   14 vars: idlist tASSIGN . exprlist

    tAPPEND      shift, and go to state 66
    tPLUS        shift, and go to state 67
    tMINUS       shift, and go to state 68
    tXOR         shift, and go to state 69
    tNOT         shift, and go to state 70
    tOPEN_PAREN  shift, and go to state 71
    tINT         shift, and go to state 72
    tFLOAT       shift, and go to state 73
    tBOOLEAN     shift, and go to state 74
    tRUNE        shift, and go to state 75
    tINTVAL      shift, and go to state 76
    tFLOATVAL    shift, and go to state 77
    tSTRINGVAL   shift, and go to state 78
    tRAWSTRVAL   shift, and go to state 79
    tIDENTIFIER  shift, and go to state 80
    tRUNEVAL     shift, and go to state 81

    exprlist           go to state 82
    expr               go to state 83
    unary_op           go to state 84
    append_expr        go to state 85
    other_expressions  go to state 86
    operand            go to state 87
    function_call      go to state 88
    typecasting        go to state 89
    struct_selector    go to state 90


State 48

   13 vars: idlist type . tASSIGN exprlist
   15     | idlist type .

    tASSIGN  shift, and go to state 91

    $default  reduce using rule 15 (vars)


State 49

   17 idlist: id tCOMMA . idlist

    tINT         shift, and go to state 21
    tFLOAT       shift, and go to state 22
    tSTRING      shift, and go to state 23
    tBOOLEAN     shift, and go to state 24
    tRUNE        shift, and go to state 25
    tIDENTIFIER  shift, and go to state 26

    idlist  go to state 92
    id      go to state 29


State 50

   46 parameters: tOPEN_PAREN tCLOSE_PAREN .

    $default  reduce using rule 46 (parameters)


State 51

   49 parameter: idlist . type

    tSTRUCT      shift, and go to state 35
    tOPEN_SQ     shift, and go to state 36
    tINT         shift, and go to state 37
    tFLOAT       shift, and go to state 38
    tSTRING      shift, and go to state 39
    tBOOLEAN     shift, and go to state 40
    tRUNE        shift, and go to state 41
    tIDENTIFIER  shift, and go to state 42

    type  go to state 93


State 52

   45 parameters: tOPEN_PAREN parameter_list . tCLOSE_PAREN
   47 parameter_list: parameter_list . tCOMMA parameter

    tCOMMA        shift, and go to state 94
    tCLOSE_PAREN  shift, and go to state 95


State 53

   48 parameter_list: parameter .

    $default  reduce using rule 48 (parameter_list)


State 54

   52 simple_block: tOPEN_BRACE . statement_list tCLOSE_BRACE

    $default  reduce using rule 54 (statement_list)

    statement_list  go to state 96


State 55

   42 function: signature body .

    $default  reduce using rule 42 (function)


State 56

   50 body: block .

    $default  reduce using rule 50 (body)


State 57

   51 block: simple_block . tSEMICOLON

    tSEMICOLON  shift, and go to state 97


State 58

   44 signature: parameters type .
